menghapus kata test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id"pageintro" class"hoc clear"
 
     <selection>
-        <h3 class="heading">Web Basic test</h3><p>
+        <h3 class="heading">Web Basic </h3><p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam dolores cum, qui suscipit corrupti ab magni blanditiis rerum doloremque non nesciunt nemo facilis at laborum accusamus officiis est commodi.
 
             </p>
