menambahkan isi style.css dan mengubah index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Belajar Web Basic</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/main.css">
+    <!--- <link rel="stylesheet" href="main.css"> -->
 
 </head>
 
@@ -19,28 +19,28 @@
             <li><a href="#">List</a></li>
             <li><a href="#">Tutorial</a></li>
             <li><a href="#">Download</a></li>
-        </ul>
+              </nul>
     </nav>
+    <div id"pageintro" class="hoc clear">
 
-    <div id"pageintro" class"hoc clear"
-
-    <selection>
-        <h3 class="heading">Web Basic </h3><p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam dolores cum, qui suscipit corrupti ab magni blanditiis rerum doloremque non nesciunt nemo facilis at laborum accusamus officiis est commodi.
-
-            </p>
+        <selection>
+          <h3 class="heading">Web Basic</h3>
+        <p>Lorem, ipsum dolor sit amet,consectetur adipisicing elit. Cumque quam dolores cum, qui suscipit corrupti ab magni blanditiis rerum doloremque non nesciunt nemo facilis at laborum accusamus officiis est commodi.
             <footer>
-               </ul>
-                   <li><a class="btn_n"href="a">masuk</a>
-                   <li><a class="btn_n"href="a">bergabung</a>
-
-                </ul>
-            </footer>
-
-        </section>
-    </div>
+                <ul>
+                    <li><a class="btn_n"href="#"></a></li>
+                    <li><a class="btn_n"href="#"></a></li>
+               <ul>
+           <footer>
+    <section>
+</div>
 
     <!-- <div class="container"></div> -->
-</body>
 
+  <!--class="countainer">
+      <div class="title">
+          <h1>Belajar Web Basic</h1>
+          <h2>RPL SMKN 1 CIOMAS</H2>
+          </div>
+</body>
 </html>
